# model2vec-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  model.rs
tests/: common.rs  test_encode.rs  test_load.rs  test_model.rs
