[package]
name = "model2vec-rs"
version = "0.1.0"
edition = "2021"
description = "Fast State-of-the-Art Static Embeddings in Rust"
readme = "README.md"
license-file = "LICENSE"
authors = ["Thomas van Dongen <thomas123@live.nl>", "Stéphan Tulkens <stephantul@gmail.com>"]
homepage = "https://github.com/MinishLab/model2vec-rs"
repository = "https://github.com/MinishLab/model2vec-rs"
keywords = ["embeddings", "model2vec", "nlp", "rust"]
categories = ["natural-language-processing", "artificial-intelligence"]

[dependencies]
tokenizers = "0.13"
safetensors = "0.5"
ndarray = "0.15"
hf-hub = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
half = "2.0"

[dev-dependencies]
approx = "0.5"
serde_json = "1.0"
